Fixed problem with aside, added overflow auto

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -105,6 +105,7 @@ main h1{
   top:0;
   height:100%;
   z-index: 20;
+  overflow:auto;
 
   .menu-title{
     position: relative;
